<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="dirtytweaks_title">Dirty Tweaks</string>
    <string name="dirtytweaks_summary">Enhance your experience</string>
    <string name="dialog_team_title">The Team</string>
    <string name="bottom_nav_system_title">System</string>
    <string name="bottom_nav_lockscreen_title">Lockscreen</string>
    <string name="bottom_nav_statusbar_title">Statusbar</string>
    <string name="bottom_nav_navigation_title">Navigation</string>
    <string name="bottom_nav_multitasking_title">Multitasking</string>
    <string name="device_extras_title">Device extras</string>
    <string name="device_extras_summary">Device specific tweaks</string>
    <string name="expanded_desktop_title">Expanded desktop</string>
    <string name="expanded_desktop_summary">Per-app configuration of the status bar and navigation key view</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Miscellaneous tweaks</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_summary">Configure the power menu</string>
    <string name="fingerprint_prefs_title">Fingerprint prefs</string>
    <string name="fingerprint_prefs_summary">Tweaks specific to the fingerprint scanner</string>
    <string name="lockscreen_items_title">Lockscreen items</string>
    <string name="lockscreen_items_summary">Customize the lockscreen</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize the statusbar battery</string>
    <string name="carrier_label_title">Carrier label</string>
    <string name="carrier_label_summary">Customize the carrier label on the lockscreen or statusbar</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Customize your statusbar clock</string>
    <string name="icon_manager_title">Icon manager</string>
    <string name="icon_manager_summary">Configure the visibility of statusbar items</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Tweaks specific to system notifications</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="quicksettings_summary">Configure the layout of the quick settings area</string>
    <string name="ticker_title">Ticker</string>
    <string name="ticker_summary">Enable the statusbar ticker and configure ticker related tweaks</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="traffic_summary">Enable and configure the traffic indicators</string>
    <string name="buttons_title">Buttons</string>
    <string name="buttons_summary">Configure volume rocker options</string>
    <string name="navigation_options_title">Navigation</string>
    <string name="navigation_options_summary">Configure navigation options</string>
    <string name="active_edge_title">Active Edge</string>
    <string name="active_edge_summary">Configure Active Edge options</string>
    <string name="headsup_title">Heads up</string>
    <string name="headsup_summary">Configure heads up options</string>
    <string name="recents_title">Recents</string>
    <string name="recents_summary">Configure recents options</string>
    <string name="sub_cat_advanced">Advanced</string>
    <string name="media_art_title">Full-screen media cover art</string>
    <string name="media_art_summary">Set full-screen media cover art on the lockscreen</string>
    <string name="powermenu_reboot_title">Restart</string>
    <string name="powermenu_advanced_restart_title">Advanced restart</string>
    <string name="powermenu_advanced_restart_summary">Enables the advanced restart menu for other restarting options</string>
    <string name="powermenu_lockdown_title">Lockdown</string>
    <string name="powermenu_screenshot_title">Screenshot</string>
    <string name="powermenu_disabled_title">Power menu when locked</string>
    <string name="powermenu_disabled_summary">Disable power menu on secure lockscreen</string>
    <string name="powermenu_lockscreen_title">Lockscreen visibility</string>
    <string name="powermenu_lockscreen_summary">Display power menu on a secured lockscreen</string>
    <string name="recents_icon_pack_title">Icon Pack</string>
    <string name="recents_icon_pack_summary">Apply a custom icon pack for Recents panel</string>
    <string name="theme_category_title">Theme options</string>
    <string name="accent_picker_dialog_title">Select an accent color</string>
    <string name="theme_accent_picker_title">Accent color</string>
    <string name="theme_accent_picker_summary">Select system theme accent color</string>
    <string name="theme_accent_picker_default">Default</string>
    <string name="accent_picker_material_colors">Material palette</string>
    <string name="accent_picker_custom_colors">User requested</string>
    <string name="qs_styles_dialog_title">Select a QS tile style</string>
    <string name="battery_style_title">Battery icon style</string>
    <string name="battery_style_summary">Change the style of the status bar battery</string>
    <string name="battery_style_port">Portrait</string>
    <string name="battery_style_circle">Circle</string>
    <string name="battery_style_dotted_circle">Dotted circle</string>
    <string name="battery_style_text">Text</string>
    <string name="status_bar_battery_style_q">Q style</string>
    <string name="battery_style_hidden">Hidden</string>
    <string name="show_battery_percent_title">Show battery percentage</string>
    <string name="show_battery_percent_summary">Show battery level percentage near the icon</string>
    <string name="battery_percent_hidden">Hidden</string>
    <string name="battery_percent_outside">Outside</string>
    <string name="battery_percent_inside">Inside</string>
    <string name="volume_button_music_control_title">Playback control</string>
    <string name="volume_button_music_control_summary">When the screen is off, long-pressing the volume keys will skip music tracks</string>
    <string name="qs_rows_portrait_title">Rows (portrait)</string>
    <string name="qs_rows_landscape_title">Rows (landscape)</string>
    <string name="qs_columns_portrait_title">Columns (portrait)</string>
    <string name="qs_columns_landscape_title">Columns (landscape)</string>
    <string name="qs_tile_title_visibility_title">Tiles title</string>
    <string name="qs_tile_title_visibility_summary">Show the titles underneath QS tiles</string>
    <string name="status_bar_quick_qs_pulldown">Quick QS pulldown</string>
    <string name="quick_pulldown_none">Disabled</string>
    <string name="quick_pulldown_right">Pulldown statusbar from right side</string>
    <string name="quick_pulldown_left">Pulldown statusbar from left side</string>
    <string name="show_brightness_title">Brightness slider</string>
    <string name="show_brightness_summary">Show the brightness slider</string>
    <string name="pulse_length_always_on">Always on</string>
    <string name="pulse_length_very_short">Very short</string>
    <string name="pulse_length_short">Short</string>
    <string name="pulse_length_normal">Normal</string>
    <string name="pulse_length_long">Long</string>
    <string name="pulse_length_very_long">Very long</string>
    <string name="pulse_speed_very_fast">Very fast</string>
    <string name="pulse_speed_fast">Fast</string>
    <string name="pulse_speed_normal">Normal</string>
    <string name="pulse_speed_slow">Slow</string>
    <string name="pulse_speed_very_slow">Very slow</string>
    <string name="pulse_help_policy_notice_summary">Pulse does not work with some audio sources when listening on device speaker</string>
    <string name="pulse_settings">Pulse</string>
    <string name="pulse_settings_summary">Navigation bar audio graphic equalizer</string>
    <string name="fling_show_pulse_title">Allow Pulse</string>
    <string name="fling_show_pulse_summary">Audio graphic equalizer on the navigation bar</string>
    <string name="pulse_render_mode_title">Render mode</string>
    <string name="pulse_render_mode_fading_bars">Fading blocks</string>
    <string name="pulse_render_mode_solid_lines">Solid lines</string>
    <string name="fling_pulse_color">Pulse color</string>
    <string name="fling_pulse_color_summary">Used also as fallback for automatic color</string>
    <string name="eos_fling_lavalamp_title">Turn on Lava Lamp</string>
    <string name="eos_fling_lavalamp_summary">Pulse animates a smooth lava lamp style color blend</string>
    <string name="pulse_advanced_category">Advanced</string>
    <string name="pulse_legacy_mode_advanced_category">Fading blocks mode settings</string>
    <string name="pulse_custom_fudge_factor">Sanity level</string>
    <string name="lavamp_solid_speed_title">Lava Lamp speed</string>
    <string name="pulse_solid_units_count">Solid lines count</string>
    <string name="pulse_solid_lines_count">Solid lines count</string>
    <string name="pulse_solid_units_opacity">Solid lines opacity</string>
    <string name="pulse_solid_dimen_category">Solid lines mode settings</string>
    <string name="pulse_auto_color_title">Automatic Pulse color</string>
    <string name="pulse_auto_color_summary">Sync color with album arts. Overrides Lava Lamp and lines opacity.</string>
    <string name="pulse_blacklist_title">Apps blacklist</string>
    <string name="pulse_blacklist_summary">Apps to be skipped for Pulse</string>
    <string name="pulse_blacklist_apps_cat_title">Blacklist</string>
    <string name="pulse_blacklist_apps_title">Apps blacklist</string>
    <string name="pulse_blacklist_apps_summary">Apps to not show in the panel</string>
    <string name="pulse_blacklist_add_apps_title">Add app</string>
    <string name="pulse_blacklist_add_apps_summary">Tap here to add, tap on added app to remove it</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="pulse_custom_dimen">Bar width</string>
    <string name="pulse_custom_div">Bar spacing</string>
    <string name="pulse_filled_block_size">Block size</string>
    <string name="pulse_empty_block_size">Block spacing</string>
    <string name="systemui_tuner_navbar_title">Layout</string>
    <string name="systemui_tuner_navbar_enabled_summary">Customize the layout of the navigation bar</string>
    <string name="systemui_tuner_navbar_disabled_summary">Gesture navbar is enabled. Disable it to use these options.</string>
    <string name="swipe_up_to_switch_apps_custom_summary">Enable gesture navigation bar</string>
    <string name="ignore_rssnr_title">Ignore RSSNR</string>
    <string name="ignore_rssnr_summary">Ignore RSSNR in LTE signal strength calculation</string>
    <string name="double_tap_to_sleep_title">Status bar</string>
    <string name="double_tap_to_sleep_summary">Double-tap status bar to put the device to sleep</string>
    <string name="volume_steps_fragment_title">Volume steps</string>
    <string name="volume_steps_summary">Customize volume steps</string>
    <string name="notification_sound_vib_screen_on_title">Noisy notifications if screen on</string>
    <string name="notification_sound_vib_screen_on_summary">Disable to block notifications sound and vibration when the screen is awake</string>
    <string name="less_notification_sounds_title">Smart notification sounds</string>
    <string name="less_notification_sounds_summary">Play the notification sound of each app only once per set time period</string>
    <string name="advanced_volume_panel_title">Advanced volume panel</string>
    <string name="advanced_volume_panel_summary">Select addional volume controls to be shown in expanded volume panel</string>
</resources>